Src/Core/API/Parser/FormulaParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from FormulaParser.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class FormulaParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DOMAIN=1, MODEL=2, TRANSFORM=3, SYSTEM=4, MACHINE=5, PARTIAL=6, ENSURES=7, 
		REQUIRES=8, CONFORMS=9, LCBRACE=10, RCBRACE=11, LPAREN=12, RPAREN=13, 
		LSBRACE=14, RSBRACE=15, INCLUDES=16, EXTENDS=17, OF=18, RETURNS=19, AT=20, 
		COLON=21, RENAMES=22, RANGE=23, SOME=24, ATLEAST=25, ATMOST=26, INITIALLY=27, 
		NEXT=28, PROPERTY=29, BOOT=30, EQ=31, TYPEDEF=32, RULE=33, PIPE=34, DOT=35, 
		SEMICOLON=36, COMMA=37, NO=38, IS=39, WEAKARROW=40, STRONGARROW=41, NEW=42, 
		INJ=43, BIJ=44, SUR=45, FUN=46, ANY=47, SUB=48, BAREID=49, QUALID=50, 
		DIGITS=51, REAL=52, FRAC=53, STRING=54, STRINGMUL=55, NE=56, LT=57, GT=58, 
		GE=59, LE=60, PLUS=61, MINUS=62, MOD=63, DIV=64, MUL=65, UQEND=66, COMMENT=67, 
		ALTCOMMENT=68, WS=69, QSTART=70, QRUN=71, QESC=72, QEND=73, UQSTART=74;
	public const int
		RULE_program = 0, RULE_moduleList = 1, RULE_module = 2, RULE_machine = 3, 
		RULE_machineBody = 4, RULE_machineSentenceConf = 5, RULE_machineSentence = 6, 
		RULE_machineProp = 7, RULE_machineSigConfig = 8, RULE_machineSig = 9, 
		RULE_machineSigIn = 10, RULE_model = 11, RULE_modelBody = 12, RULE_modelSentence = 13, 
		RULE_modelContractConf = 14, RULE_modelContract = 15, RULE_modelFactList = 16, 
		RULE_modelFact = 17, RULE_cardSpec = 18, RULE_modelSigConfig = 19, RULE_modelSig = 20, 
		RULE_modelIntro = 21, RULE_tSystem = 22, RULE_tSystemRest = 23, RULE_transSteps = 24, 
		RULE_transStepConfig = 25, RULE_transform = 26, RULE_transformRest = 27, 
		RULE_transBody = 28, RULE_transSentenceConfig = 29, RULE_transSentence = 30, 
		RULE_transformSigConfig = 31, RULE_transformSig = 32, RULE_transSigIn = 33, 
		RULE_domain = 34, RULE_domSentences = 35, RULE_domSentenceConfig = 36, 
		RULE_domSentence = 37, RULE_domainSigConfig = 38, RULE_domainSig = 39, 
		RULE_config = 40, RULE_sentenceConfig = 41, RULE_settingList = 42, RULE_setting = 43, 
		RULE_modelParamList = 44, RULE_valOrModelParam = 45, RULE_vomParamList = 46, 
		RULE_update = 47, RULE_step = 48, RULE_choiceList = 49, RULE_modApply = 50, 
		RULE_modArgList = 51, RULE_modAppArg = 52, RULE_stepOrUpdateLHS = 53, 
		RULE_modRefs = 54, RULE_modRef = 55, RULE_modRefRename = 56, RULE_modRefNoRename = 57, 
		RULE_typeDecl = 58, RULE_typeDeclBody = 59, RULE_funDecl = 60, RULE_fields = 61, 
		RULE_field = 62, RULE_mapArrow = 63, RULE_unnBody = 64, RULE_unnCmp = 65, 
		RULE_typeId = 66, RULE_enumList = 67, RULE_enumCnst = 68, RULE_ruleItem = 69, 
		RULE_compr = 70, RULE_comprRest = 71, RULE_bodyList = 72, RULE_body = 73, 
		RULE_constraint = 74, RULE_funcTermList = 75, RULE_funcOrCompr = 76, RULE_funcTerm = 77, 
		RULE_quoteList = 78, RULE_quoteItem = 79, RULE_atom = 80, RULE_id = 81, 
		RULE_constant = 82, RULE_unOp = 83, RULE_binOp = 84, RULE_relOp = 85, 
		RULE_str = 86;
	public static readonly string[] ruleNames = {
		"program", "moduleList", "module", "machine", "machineBody", "machineSentenceConf", 
		"machineSentence", "machineProp", "machineSigConfig", "machineSig", "machineSigIn", 
		"model", "modelBody", "modelSentence", "modelContractConf", "modelContract", 
		"modelFactList", "modelFact", "cardSpec", "modelSigConfig", "modelSig", 
		"modelIntro", "tSystem", "tSystemRest", "transSteps", "transStepConfig", 
		"transform", "transformRest", "transBody", "transSentenceConfig", "transSentence", 
		"transformSigConfig", "transformSig", "transSigIn", "domain", "domSentences", 
		"domSentenceConfig", "domSentence", "domainSigConfig", "domainSig", "config", 
		"sentenceConfig", "settingList", "setting", "modelParamList", "valOrModelParam", 
		"vomParamList", "update", "step", "choiceList", "modApply", "modArgList", 
		"modAppArg", "stepOrUpdateLHS", "modRefs", "modRef", "modRefRename", "modRefNoRename", 
		"typeDecl", "typeDeclBody", "funDecl", "fields", "field", "mapArrow", 
		"unnBody", "unnCmp", "typeId", "enumList", "enumCnst", "ruleItem", "compr", 
		"comprRest", "bodyList", "body", "constraint", "funcTermList", "funcOrCompr", 
		"funcTerm", "quoteList", "quoteItem", "atom", "id", "constant", "unOp", 
		"binOp", "relOp", "str"
	};

	private static readonly string[] _LiteralNames = {
		null, "'domain'", "'model'", "'transform'", "'system'", "'machine'", "'partial'", 
		"'ensures'", "'requires'", "'conforms'", "'{'", "'}'", "'('", "')'", "'['", 
		"']'", "'includes'", "'extends'", "'of'", "'returns'", "'at'", "':'", 
		"'::'", "'..'", "'some'", "'atleast'", "'atmost'", "'initially'", "'next'", 
		"'property'", "'boot'", "'='", "'::='", "':-'", "'|'", "'.'", "';'", "','", 
		"'no'", "'is'", "'->'", "'=>'", "'new'", "'inj'", "'bij'", "'sur'", "'fun'", 
		"'any'", "'sub'", null, null, null, null, null, null, null, "'!='", "'<'", 
		"'>'", "'>='", "'<='", "'+'", "'-'", "'%'", "'/'", "'*'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DOMAIN", "MODEL", "TRANSFORM", "SYSTEM", "MACHINE", "PARTIAL", 
		"ENSURES", "REQUIRES", "CONFORMS", "LCBRACE", "RCBRACE", "LPAREN", "RPAREN", 
		"LSBRACE", "RSBRACE", "INCLUDES", "EXTENDS", "OF", "RETURNS", "AT", "COLON", 
		"RENAMES", "RANGE", "SOME", "ATLEAST", "ATMOST", "INITIALLY", "NEXT", 
		"PROPERTY", "BOOT", "EQ", "TYPEDEF", "RULE", "PIPE", "DOT", "SEMICOLON", 
		"COMMA", "NO", "IS", "WEAKARROW", "STRONGARROW", "NEW", "INJ", "BIJ", 
		"SUR", "FUN", "ANY", "SUB", "BAREID", "QUALID", "DIGITS", "REAL", "FRAC", 
		"STRING", "STRINGMUL", "NE", "LT", "GT", "GE", "LE", "PLUS", "MINUS", 
		"MOD", "DIV", "MUL", "UQEND", "COMMENT", "ALTCOMMENT", "WS", "QSTART", 
		"QRUN", "QESC", "QEND", "UQSTART"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "FormulaParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static FormulaParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public FormulaParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public FormulaParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(FormulaParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ConfigContext config() {
			return GetRuleContext<ConfigContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleListContext moduleList() {
			return GetRuleContext<ModuleListContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			State = 180;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 174;
				Match(Eof);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 175;
				config();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 176;
				moduleList();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 177;
				config();
				State = 178;
				moduleList();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleListContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext[] module() {
			return GetRuleContexts<ModuleContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModuleContext module(int i) {
			return GetRuleContext<ModuleContext>(i);
		}
		public ModuleListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moduleList; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModuleList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleListContext moduleList() {
		ModuleListContext _localctx = new ModuleListContext(Context, State);
		EnterRule(_localctx, 2, RULE_moduleList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 183;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 182;
				module();
				}
				}
				State = 185;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DOMAIN) | (1L << MODEL) | (1L << TRANSFORM) | (1L << MACHINE) | (1L << PARTIAL))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public DomainContext domain() {
			return GetRuleContext<DomainContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ModelContext model() {
			return GetRuleContext<ModelContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TransformContext transform() {
			return GetRuleContext<TransformContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TSystemContext tSystem() {
			return GetRuleContext<TSystemContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MachineContext machine() {
			return GetRuleContext<MachineContext>(0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 4, RULE_module);
		try {
			State = 192;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 187;
				domain();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 188;
				model();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 189;
				transform();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 190;
				tSystem();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 191;
				machine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MachineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MachineSigConfigContext machineSigConfig() {
			return GetRuleContext<MachineSigConfigContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCBRACE() { return GetToken(FormulaParser.LCBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCBRACE() { return GetToken(FormulaParser.RCBRACE, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MachineBodyContext machineBody() {
			return GetRuleContext<MachineBodyContext>(0);
		}
		public MachineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_machine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMachine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MachineContext machine() {
		MachineContext _localctx = new MachineContext(Context, State);
		EnterRule(_localctx, 6, RULE_machine);
		try {
			State = 203;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 194;
				machineSigConfig();
				State = 195;
				Match(LCBRACE);
				State = 196;
				Match(RCBRACE);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 198;
				machineSigConfig();
				State = 199;
				Match(LCBRACE);
				State = 200;
				machineBody();
				State = 201;
				Match(RCBRACE);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MachineBodyContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MachineSentenceConfContext machineSentenceConf() {
			return GetRuleContext<MachineSentenceConfContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MachineBodyContext machineBody() {
			return GetRuleContext<MachineBodyContext>(0);
		}
		public MachineBodyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_machineBody; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMachineBody(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MachineBodyContext machineBody() {
		MachineBodyContext _localctx = new MachineBodyContext(Context, State);
		EnterRule(_localctx, 8, RULE_machineBody);
		try {
			State = 209;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 205;
				machineSentenceConf();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 206;
				machineSentenceConf();
				State = 207;
				machineBody();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MachineSentenceConfContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MachineSentenceContext machineSentence() {
			return GetRuleContext<MachineSentenceContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SentenceConfigContext sentenceConfig() {
			return GetRuleContext<SentenceConfigContext>(0);
		}
		public MachineSentenceConfContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_machineSentenceConf; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMachineSentenceConf(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MachineSentenceConfContext machineSentenceConf() {
		MachineSentenceConfContext _localctx = new MachineSentenceConfContext(Context, State);
		EnterRule(_localctx, 10, RULE_machineSentenceConf);
		try {
			State = 215;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case INITIALLY:
			case NEXT:
			case PROPERTY:
			case BOOT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 211;
				machineSentence();
				}
				break;
			case LSBRACE:
				EnterOuterAlt(_localctx, 2);
				{
				State = 212;
				sentenceConfig();
				State = 213;
				machineSentence();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MachineSentenceContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MachinePropContext machineProp() {
			return GetRuleContext<MachinePropContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode BOOT() { return GetToken(FormulaParser.BOOT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StepContext step() {
			return GetRuleContext<StepContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode INITIALLY() { return GetToken(FormulaParser.INITIALLY, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public UpdateContext update() {
			return GetRuleContext<UpdateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEXT() { return GetToken(FormulaParser.NEXT, 0); }
		public MachineSentenceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_machineSentence; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IFormulaParserVisitor<TResult> typedVisitor = visitor as IFormulaParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMachineSentence(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MachineSentenceContext machineSentence() {
		MachineSentenceContext _localctx = new MachineSentenceContext(Context, State);
		EnterRule(_localctx, 12, RULE_machineSentence);
		try {
			State = 224;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case PROPERTY:
				EnterOuterAlt(_localctx, 1);
				{
				State = 217;
				machineProp();
				}
				break;
			case BOOT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 218;
				Match(BOOT);
				State = 219;
				step();
				}
				break;
			case INITIALLY:
				EnterOuterAlt(_localctx, 3);
				{
				State = 220;
				Match(INITIALLY);
				State = 221;
				update();
				}
				break;
			case NEXT:
				EnterOuterAlt(_localctx, 4);
				{
				State = 222;
				Match(NEXT);
				State = 223;
				update();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
